--- a/products/RAT-STATS/rstats_modules/UnrestrictedAttributeAppraisal/src/UIRStatsUAA.ui
+++ b/products/RAT-STATS/rstats_modules/UnrestrictedAttributeAppraisal/src/UIRStatsUAA.ui
@@ -1,25 +1,202 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>UIRStatsUAA</class>
- <widget class="QDialog" name="UIRStatsUAA">
+ <widget class="QMainWindow" name="UIRStatsUAA">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>734</width>
-    <height>638</height>
+    <width>753</width>
+    <height>558</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>UIRStatsUAA</string>
+   <string>UIRstatsUAA</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_3">
-   <item>
-    <widget class="QSplitter" name="splitter_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <widget class="QWidget" name="verticalLayoutWidget">
+  <widget class="QWidget" name="centralwidget">
+   <property name="windowTitle">
+    <string>UIRStatsUAA</string>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_8">
+    <item>
+     <widget class="QSplitter" name="splitter">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <widget class="QFrame" name="verticalFrame_4">
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QFrame" name="m_frmTimeDate">
+          <property name="styleSheet">
+           <string notr="true">#m_frmTimeDate
+{
+	border:2px solid gray;
+	border-radius:10px;
+	padding: 5px;
+}</string>
+          </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_4">
+           <property name="leftMargin">
+            <number>4</number>
+           </property>
+           <property name="topMargin">
+            <number>4</number>
+           </property>
+           <property name="rightMargin">
+            <number>4</number>
+           </property>
+           <property name="bottomMargin">
+            <number>4</number>
+           </property>
+           <item>
+            <widget class="QLabel" name="label_6">
+             <property name="font">
+              <font>
+               <pointsize>12</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Date:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="m_lblDate">
+             <property name="font">
+              <font>
+               <pointsize>12</pointsize>
+               <weight>75</weight>
+               <italic>false</italic>
+               <bold>true</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>02/22/99</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_5">
+             <property name="font">
+              <font>
+               <pointsize>12</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Time:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="m_lblTime">
+             <property name="font">
+              <font>
+               <pointsize>12</pointsize>
+               <weight>75</weight>
+               <bold>true</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>00:00</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="QGroupBox" name="verticalGroupBox_2">
+          <property name="title">
+           <string>Output Table:</string>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout_7">
+           <property name="leftMargin">
+            <number>4</number>
+           </property>
+           <property name="topMargin">
+            <number>4</number>
+           </property>
+           <property name="rightMargin">
+            <number>4</number>
+           </property>
+           <property name="bottomMargin">
+            <number>4</number>
+           </property>
+           <item>
+            <widget class="QTableWidget" name="m_tblInputData">
+             <property name="rowCount">
+              <number>0</number>
+             </property>
+             <attribute name="horizontalHeaderStretchLastSection">
+              <bool>true</bool>
+             </attribute>
+             <attribute name="verticalHeaderVisible">
+              <bool>false</bool>
+             </attribute>
+             <column>
+              <property name="text">
+               <string>Universe Size</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>Sample Size</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>Number with Characteristics of Interest</string>
+              </property>
+             </column>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="m_lblNoData">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>28</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>No Data to Display</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QDockWidget" name="dockWidget">
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents">
+    <layout class="QVBoxLayout" name="verticalLayout_3">
+     <item>
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
         <widget class="QGroupBox" name="gridGroupBox_2">
@@ -39,15 +216,18 @@
           <property name="bottomMargin">
            <number>2</number>
           </property>
+          <property name="spacing">
+           <number>11</number>
+          </property>
           <item row="4" column="0">
-           <widget class="QCheckBox" name="checkBox">
+           <widget class="QCheckBox" name="m_chkOC0">
             <property name="text">
              <string>Only compute upper limit when COI = 0</string>
             </property>
            </widget>
           </item>
           <item row="2" column="0">
-           <widget class="QGroupBox" name="verticalGroupBox_2">
+           <widget class="QGroupBox" name="verticalGroupBox_3">
             <property name="title">
              <string>Sample Size:</string>
             </property>
@@ -65,48 +245,42 @@
               <number>9</number>
              </property>
              <item>
-              <widget class="QSpinBox" name="spinBox"/>
+              <widget class="QSpinBox" name="m_spnSampleSize"/>
              </item>
             </layout>
            </widget>
           </item>
           <item row="6" column="0">
-           <widget class="QGroupBox" name="verticalGroupBox_3">
+           <widget class="QGroupBox" name="verticalGroupBox_4">
             <property name="title">
              <string>Output Options:</string>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_4">
              <item>
-              <layout class="QGridLayout" name="gridLayout_4">
-               <item row="0" column="0">
-                <widget class="QCheckBox" name="m_chkTextOutput_2">
-                 <property name="text">
-                  <string>Text File</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="1">
-                <widget class="QCheckBox" name="m_chkExcelOutput_2">
-                 <property name="text">
-                  <string>Excel File</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="1">
-                <widget class="QCheckBox" name="m_chkAccessOutput_2">
-                 <property name="text">
-                  <string>Access File</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="0">
-                <widget class="QCheckBox" name="m_chkPrinterOutput_2">
-                 <property name="text">
-                  <string>Printer</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
+              <widget class="QFrame" name="frame">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_4">
+                <item row="0" column="0">
+                 <widget class="QCheckBox" name="m_chkTextOutput">
+                  <property name="text">
+                   <string>Text File</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="1">
+                 <widget class="QCheckBox" name="m_chkExcelAccessOutput">
+                  <property name="text">
+                   <string>Excel / Access File</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </widget>
              </item>
             </layout>
            </widget>
@@ -147,27 +321,40 @@
            </widget>
           </item>
           <item row="3" column="0">
-           <widget class="QGroupBox" name="verticalGroupBox_2">
+           <widget class="QGroupBox" name="verticalGroupBox_5">
             <property name="title">
              <string>Number with Characteristic of Interest (COI):</string>
             </property>
             <layout class="QGridLayout" name="gridLayout">
              <item row="0" column="0">
-              <widget class="QSpinBox" name="spinBox_2"/>
+              <widget class="QSpinBox" name="m_spnCOI"/>
              </item>
             </layout>
            </widget>
           </item>
           <item row="5" column="0">
-           <widget class="QCheckBox" name="checkBox_2">
+           <widget class="QCheckBox" name="m_chkOCSample">
             <property name="text">
              <string>Only compute lower limit  when COI = sample size</string>
             </property>
            </widget>
           </item>
+          <item row="7" column="0">
+           <widget class="QPushButton" name="m_btnContinue">
+            <property name="text">
+             <string>Continue</string>
+            </property>
+           </widget>
+          </item>
           <item row="8" column="0">
-           <widget class="QFrame" name="">
-            <layout class="QGridLayout" name="gridLayout_3">
+           <widget class="QWidget" name="widget" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout">
              <property name="leftMargin">
               <number>4</number>
              </property>
@@ -180,14 +367,7 @@
              <property name="bottomMargin">
               <number>4</number>
              </property>
-             <item row="0" column="0">
-              <widget class="QPushButton" name="m_btnSetOutputFolder">
-               <property name="text">
-                <string>Set Output Folder</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
+             <item>
               <widget class="QToolButton" name="m_btnExit">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -209,7 +389,7 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="1">
+             <item>
               <widget class="QToolButton" name="m_btnHelp">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -231,13 +411,6 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
-              <widget class="QPushButton" name="pushButton">
-               <property name="text">
-                <string>Continue</string>
-               </property>
-              </widget>
-             </item>
             </layout>
            </widget>
           </item>
@@ -245,68 +418,10 @@
         </widget>
        </item>
       </layout>
-     </widget>
-     <widget class="QSplitter" name="splitter">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <widget class="QGroupBox" name="verticalGroupBox_4">
-       <property name="title">
-        <string>Output:</string>
-       </property>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <widget class="QTableWidget" name="m_tblInputData">
-          <property name="rowCount">
-           <number>0</number>
-          </property>
-          <attribute name="horizontalHeaderStretchLastSection">
-           <bool>true</bool>
-          </attribute>
-          <attribute name="verticalHeaderVisible">
-           <bool>true</bool>
-          </attribute>
-          <column>
-           <property name="text">
-            <string>Universe Size</string>
-           </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>Sample Size</string>
-           </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>Number with Characteristics of Interest</string>
-           </property>
-          </column>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>28</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>No Data to Display</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-     </widget>
-    </widget>
-   </item>
-  </layout>
+     </item>
+    </layout>
+   </widget>
+  </widget>
  </widget>
  <resources/>
  <connections/>
